--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
     <title>Article One : Suresh </title>
    <meta name="viewport" content="width=device-width,initial-scale=1"/>
