--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -2,29 +2,40 @@
 <head>
     <title>Article One : Suresh </title>
    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+   <style>
+       .container{
+            max-width :800px;
+            margin: 0 auto;
+            color: grey;
+            font-family:sans-serif;
+       }
+       
+   </style>
 </head>
 <body>
-    <div>
-        <a href="/">Home</a>
-    </div>
-    <hr/>
-    <h3>
-        Article One
-    </h3>
-    <div>
-        November 1, 2016
-    </div>
-    <div>
-        <p>
-            This is article one the content of which will be added shortly.
-        </p>
-        <p>
-            This is the second para of the article which is yet to be modified.
-        </p>
-        <p>
-            This is the third para of the article which is yet to be modified.
-        </p>
-
+    <div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            November 1, 2016
+        </div>
+        <div>
+            <p>
+                This is article one the content of which will be added shortly.
+            </p>
+            <p>
+                This is the second para of the article which is yet to be modified.
+            </p>
+            <p>
+                This is the third para of the article which is yet to be modified.
+            </p>
+    
+        </div>
     </div>
 </body>
 </html>
