[imad-console] Updates ui/articletwo.html

--- a/ui/articletwo.html
+++ b/ui/articletwo.html
@@ -2,23 +2,37 @@
 <head>
     <title>Article Two : Suresh </title>
    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+   <style>
+       .container{
+        max-width: 800px;
+        margin: 0 auto;
+        color: #8e8282;
+        font-family: sans-serif;
+        padding-top: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
+       }
+       
+   </style>
 </head>
 <body>
-    <div>
-        <a href="/">Home</a>
-    </div>
-    <hr/>
-    <h3>
-        Article Two
-    </h3>
-    <div>
-        November 1, 2016
-    </div>
-    <div>
-        <p>
-            This is article two the content of which will be added shortly.
-        </p>
-
+      <div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article Two
+        </h3>
+        <div>
+            November 1, 2016
+        </div>
+        <div>
+            <p>
+                This is article two the content of which will be added shortly.
+            </p>
+    
+        </div>
     </div>
 </body>
 </html>
