--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,19 +1,8 @@
 <html>
 <head>
     <title>Article One : Suresh </title>
-   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-   <style>
-       .container{
-        max-width: 800px;
-        margin: 0 auto;
-        color: #8e8282;
-        font-family: sans-serif;
-        padding-top: 60px;
-        padding-left: 20px;
-        padding-right: 20px;
-       }
-       
-   </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link href="/ui/style.css" rel="stylesheet" />  
 </head>
 <body>
     <div class="container">
