--- a/ui/articletwo.html
+++ b/ui/articletwo.html
@@ -1,19 +1,8 @@
 <html>
 <head>
-    <title>Article Two : Suresh </title>
+   <title>Article Two : Suresh </title>
    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-   <style>
-       .container{
-        max-width: 800px;
-        margin: 0 auto;
-        color: #8e8282;
-        font-family: sans-serif;
-        padding-top: 60px;
-        padding-left: 20px;
-        padding-right: 20px;
-       }
-       
-   </style>
+   <link href="/ui/style.css" rel="stylesheet" />  
 </head>
 <body>
       <div class="container">
