[imad-console] Updates ui/articlethree.html

--- a/ui/articlethree.html
+++ b/ui/articlethree.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Article One : Suresh </title>
+    <title>Article Three : Suresh </title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link href="/ui/style.css" rel="stylesheet" />  
 </head>
@@ -11,22 +11,15 @@
         </div>
         <hr/>
         <h3>
-            Article One
+            Article Three
         </h3>
         <div>
-            November 1, 2016
+            November 15, 2016
         </div>
         <div>
             <p>
                 This is article one the content of which will be added shortly.
             </p>
-            <p>
-                This is the second para of the article which is yet to be modified.
-            </p>
-            <p>
-                This is the third para of the article which is yet to be modified.
-            </p>
-    
         </div>
     </div>
 </body>
