[imad-console] Updates ui/articlethree.html

--- a/ui/articlethree.html
+++ b/ui/articlethree.html
@@ -18,7 +18,7 @@
         </div>
         <div>
             <p>
-                This is article one the content of which will be added shortly.
+                This is article three the content of which will be added shortly.
             </p>
         </div>
     </div>
