--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
             Hi! I am suresh. I have changed the file.
 	    <h4> This is a new heading..</h4>
         </div>
