[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,23 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="logo" src="/ui/madi.png" class="img-medium"/>
+        <div class="container" >
+            <div class="center">
+                <img id="logo" src="/ui/cerebral_logo.jpg" class="img-medium"/>
+            </div>
+            <hr>
+            <h3>Personal</h3>
+            <div> 
+                Hi, I am Suresh Kumar
+            </div>
+            <hr>
+            <h3>Professional</h3>
+            <div> 
+                Working in New Cerebral Systems after Engineering fron NIT, Trichy.
+            </div>
+            <div class="footer"> 
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am suresh. I have changed the file.
-	    <h4> This is a new heading..</h4>
-        </div>
-        <script>
-            alert('Hi, I\'m Suresh ');
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
