--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container" >
             <div class="center">
-                <img id="logo" src="/ui/cerebral_logo.jpg" class="img-medium"/>
+                <img id="logo" src="/ui/madi.png" class="img-medium"/>
             </div>
             <hr>
             <h3>Personal</h3>
