[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <hr>
             <h3>Professional</h3>
             <div> 
-                Working in New Cerebral Systems after Engineering fron NIT, Trichy.
+                Working at New Cerebral Systems after Engineering from NIT, Trichy.
             </div>
             <div class="footer"> 
             </div>
