--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,7 @@
                 Working at New Cerebral Systems after Engineering from NIT, Trichy.
             </div>
             <div class="footer"> 
+                Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
