[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,20 +8,29 @@
             <div class="center">
                 <img id="logo" src="/ui/cerebral_logo.jpg" class="img-medium"/>
             </div>
-            <hr>
+            <hr/>
             <h3>Personal</h3>
             <div> 
                 Hi, I am Suresh Kumar
             </div>
-            <hr>
+            <hr/>
             <h3>Professional</h3>
             <div> 
-                Working at New Cerebral Systems after Engineering from NIT, Trichy.
+                Working at New Cerebral Systems
             </div>
-            <hr>
+            <hr/>
             <div class="footer"> 
                 Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
             </div>
+            <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="submit"></input>
+            <ul>
+                <li>
+                    
+                </li>
+                
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
