[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,15 +19,16 @@
                 Working at New Cerebral Systems
             </div>
             <hr/>
-            <div class="footer"> 
-                Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
+            <h3>Login to enter the site</h3>
+            <div> 
+                <input type="text" id="username" placeholder="username"/>
+                <input type="password" id="password"/>
+                <input type="submit" id="submit_btn" />
             </div>
             <hr/>
-            <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" id="submit_btn" value="submit"></input>
-            <ul id = "nameList">
-             
-            </ul>
+            <div class="footer">
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
