--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container" >
-            <div class="center">
+            <div class="right">
                 <img id="logo" src="/ui/cerebral_logo.jpg" class="img-medium"/>
             </div>
             <hr/>
